Commit 6 - Added initial content for resume site

--- a/resume_page/index.html
+++ b/resume_page/index.html
@@ -7,5 +7,20 @@
   <body>
     <h1>Vaibhav Patel</h1>
 
+    <img src="hs.jpg" alt="Profile Picture">
+
+<h3>Work Experience</h3>
+
+<ul>
+  <li>Pharmacy Technician</li>
+  <li>Assistant General Manager</li>
+  <li>Project Management Intern</li>
+</ul>
+
+<h3>Link for my linkedIn Profile</h3>
+
+<a href="https://www.linkedin.com/in/vaibhav-patel/">LinkedIn</a>
+
+
   </body>
 </html>
