Commit 8 - Added project.html page and content

--- a/resume_page/index.html
+++ b/resume_page/index.html
@@ -6,6 +6,13 @@
     <title></title>
   </head>
   <body>
+
+    <nav>
+      <a href="index.html">Home Page</a> |
+      <a href="https://www.linkedin.com/in/vaibhav-patel/">LinkedIn</a>
+      <a href="projects.html">Projects</a>
+    </nav>
+
     <h1>Vaibhav Patel</h1>
 
     <img src="hs.jpg" alt="Profile Picture">
