Commit 10 - Worked on Hungry for More

--- a/resume_page/index.html
+++ b/resume_page/index.html
@@ -9,13 +9,18 @@
 
     <nav>
       <a href="index.html">Home Page</a> |
-      <a href="https://www.linkedin.com/in/vaibhav-patel/">LinkedIn</a>
+      <a href="https://www.linkedin.com/in/vaibhav-patel/">LinkedIn</a> |
       <a href="projects.html">Projects</a>
     </nav>
 
     <h1>Vaibhav Patel</h1>
 
     <img src="hs.jpg" alt="Profile Picture">
+
+    <h3>Dope Video</h3>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/L9VBpbnXhWk?autoplay=1" frameborder="0" allow="autoplay=1; encrypted-media" allowfullscreen></iframe>
+
 
 <h3>Work Experience</h3>
 
@@ -24,11 +29,6 @@
   <li>Assistant General Manager</li>
   <li>Project Management Intern</li>
 </ul>
-
-<h3>Link for my linkedIn Profile</h3>
-
-<a href="https://www.linkedin.com/in/vaibhav-patel/">LinkedIn</a>
-
 
   </body>
 </html>
